2007-01-03  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/exception/PustefixApplicationException.java (added): 
	* src/de/schlund/pfixcore/exception/PustefixCoreException.java (added): 
	* src/de/schlund/pfixcore/exception/PustefixException.java (added): 
	* src/de/schlund/pfixcore/exception/PustefixRuntimeException.java (added): 
	* src/de/schlund/pfixcore/scriptedflow/vm/ScriptVM.java: 
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/Context.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ContextResourceManager.java: 
	* src/de/schlund/pfixcore/workflow/FlowStep.java: 
	* src/de/schlund/pfixcore/workflow/Navigation.java: 
	* src/de/schlund/pfixcore/workflow/NavigationFactory.java: 
	* src/de/schlund/pfixcore/workflow/NavigationInitializationException.java (added): 
	* src/de/schlund/pfixxml/jmx/TrailLogger.java: 
	* src/de/schlund/pfixxml/AbstractXMLServer.java: 
	* src/de/schlund/pfixxml/ContextXMLServer.java: 
	* src/de/schlund/pfixxml/RenderingException.java (added): 
	Redesigned exception handling: Context methods now throw PustefixCoreExceptions
	and PustefixApplicationExceptions instead of generic Exceptions.
	PustefixApplicationExceptions wrap exceptions thrown by application code (e.g.
	State instances).

2007-01-02  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: removed check
	for webservice source files (cause they aren't really required and are absent if
	the services come from jar files), extended modification check (modtime within jar
	file is checked too)

2007-01-02  Martin Leidig  <mleidig@schlund.de>

	Added new AJAX JS stub callback mechanism. Now you can pass an object to 
	the webservice constructor and the webservice will automatically call back
	object methods of the same name.
